# x3270-old

./: LICENSE  README.md
src/3270tool/: 3270.font  3270.font.uu  3270.h  3270_enc.h  3270tool.1  3270tool.c  BtnClear  BtnEnter  BtnPA1  BtnPA2  BtnPF01  BtnPF02  BtnPF03  BtnPF04  BtnPF05  BtnPF06  BtnPF07  BtnPF08  BtnPF09  BtnPF10  BtnPF11  BtnPF12  BtnPF13  BtnPF14  BtnPF15  BtnPF16  BtnPF17  BtnPF18  BtnPF19  BtnPF20  BtnPF21  BtnPF22  BtnPF23  BtnPF24  BtnShift  BtnSysReq  Makefile  keypanel.c  kybd.c  screen.c  (+2 more)
src/c3270/: 3270ds.h  LICENSE  Makefile  Makefile.in  Makefile.sun  README  X3270.xad  XtGlue.c  actions.c  ansi.c  apl.c  appres.h  c3270.c  c3270.c.orig  c3270.lsm  c3270.man  charset.c  charsetc.h  child.c  conf.h.in  configure  configure.in  ctlr.c  ctlr.h  ctlrc.h  ft_cut.c  ft_cut_ds.h  ft_dft.c  ftc.h  globals.h  glue.c  glue.c.orig  gluec.h  help.c  host.c  hostc.h  ibm-1385_P100-1997.ucm  ibm_hosts  ibm_hosts.man  idle.c  (+39 more)
src/c3270/X11/: keysym.h
src/c3270/html/: Bugs.html  Build.html  FAQ.html  Intro.html  Lineage.html  New.html  README.html  ReleaseNotes.html  Resources.html  Wishlist.html  c3270-man.html  x3270-script.html  x3270.xbm  x3270if.html
src/c3270/pr3287/: 3270ds.h  Makefile.aux  Makefile.in  README  arpa_telnet.h  charset.c  charsetc.h  config.guess  config.sub  configure  configure.in  ctlr.c  ctlrc.h  globals.h  install-sh  localdefs.h  mkversion.sh  popupsc.h  pr3287.c  pr3287.lsm  pr3287.man  proxy.c  proxyc.h  resolver.c  resolverc.h  see.c  seec.h  sf.c  sfc.h  tables.c  tablesc.h  telnet.c  telnetc.h  tn3270e.h  trace_ds.c  trace_dsc.h  unicode.c  unicode_dbcs.c  unicode_dbcsc.h  unicodec.h  (+6 more)
src/pr3287/: 3270ds.h  Makefile  Makefile.aux  Makefile.in  README  charset.c  charsetc.h  configure  configure.in  ctlr.c  ctlrc.h  gen_lsm  gen_man  globals.h  localdefs.h  mkversion.sh  pr3287.c  pr3287.lsm  pr3287.man  proxyc.h  resolverc.h  tables.c  tablesc.h  telnet.c  telnetc.h  tn3270e.h  trace_ds.c  trace_dsc.h  version.txt  wide.c
src/pr3287/html/: Build.html  New.html  ReleaseNotes.html  pr3287-man.html
src/s3270/: LICENSE  Makefile  Makefile.aux  Makefile.in  README  README.p9  XrmGlue.c  XtGlue.c  actionsc.h  conf.h.in  configure  configure.in  ft.c.orig  glue.c  glue.c.orig  gluec.h  idle.c  install-sh  keymapc.h  kybd.c  kybd.c.orig  localdefs.h  macros.c.orig  macrosc.h  mkversion.sh  parts.h  parts.h.in  popupsc.h  resolver.c  resources.c  s3270.lsm  s3270.man  s3270.man.tmpl  savec.h  screen.h  screenc.h  scrollc.h  selectc.h  smain.c  statusc.h  (+8 more)
src/s3270/Examples/: cms_cmd.expect  s3270_glue.expect
src/s3270/X11/: Intrinsic.h  keysym.h
src/s3270/charset/: greek  thai
src/s3270/html/: Bugs.html  Build.html  FAQ.html  Intro.html  Lineage.html  New.html  README.html  ReleaseNotes.html  Resources.html  Wishlist.html  s3270-man.html  s3270-man.html.tmpl  s3270.man.html  x3270-script.html  x3270if.html
src/tcl3270/: 3270ds.h  LICENSE  Makefile  Makefile.aux  Makefile.in  README  README.p11  README.p15  README.p7  actions.c  conf.h  conf.h.in  config.guess  config.sub  configure  configure.in  ctlr.c  dialogc.h  ft_dftc.h  glue.c  glue.c.orig  host.c  hostc.h  ibm-1027_P100-1995.ucm  ibm-300_P110-1997.ucm  ibm-837_P100-2000.ucm  kybd.c.orig  localdefs.h  macrosc.h  parts.h  tcl3270.c  tcl3270.lsm  tcl3270.man  tcl3270.man.tmpl  telnet.c  telnet.h  trace_ds.c  version.txt
src/tcl3270/Examples/: cms_cmd.tcl3270
src/tcl3270/charset/: brazilian  russian
src/tcl3270/html/: Build.html  FAQ.html  Intro.html  Lineage.html  New.html  README.html  ReleaseNotes.html  Resources.html  tcl3270-man.html
src/wc3270/: 3270ds.h  LICENSE  Makefile  X3270.xad  XtGlue.c  actions.c  ansi.c  appres.h  c3270.c  conf.h  ctlr.c  ft.c  glue.c  gluec.h  help.c  icmd.c  icmdc.h  keymap.c  keymapc.h  keypadc.h  kybd.c  localdefs.h  macros.c  mkfb.c  mkshort.c  mkversion.sh  popupsc.h  print.c  printer.c  printerc.h  resources.h  screen.c  screenc.h  see.c  sf.c  statusc.h  telnet.c  telnetc.h  trace_ds.c  unicode.c  (+10 more)
src/wpr3287/: LICENSE  Makefile  Makefile.aux  charset.c  ctlr.c  sf.c  (+24 more)
src/x3270/: 3270-12.bdf  3270-12.fb  3270-12.ff  3270-12b.bdf  3270-12b.fb  3270-12bold.ff  3270-20.bdf  3270-20b.bdf  3270-apl.ff  3270-aplbold.ff  3270.bdf  3270.fb  3270.ff  3270.h  3270_enc.h  3270a.bdf  3270a.fb  3270a.pcf  3270ab.bdf  3270ab.fb  3270ab.pcf  3270b.bdf  3270b.fb  3270bold.ff  3270c8x16.bdf  3270d.bdf  3270d.fb  3270d.ff  3270ds.h  3270e-12.bdf  3270e-12b.bdf  3270e-20.bdf  3270e-20b.bdf  3270e.bdf  3270eb.bdf  3270egt12.bdf  3270egt12b.bdf  3270egt16.bdf  3270egt16b.bdf  3270egt24.bdf  (+232 more)
src/x3270/Docs/: Attributes  Bugs  Bugs.html  Build  Build.html  Charset  Charset.html  FAQ  FAQ.html  Intro  Lineage  Lineage.html  New  New.3.0.2  New.3.0.3  New.3.0.3.html  Resources  Resources.html  Wishlist  Wishlist.html  Y2K  attributes.c  ibm_hosts.html  x3270-script.html  x3270.man.html
src/x3270/Examples/: cms_logon.bash  cms_logon.sh
src/x3270/Melt/: kybd.c  screen.c
src/x3270/NoTrace/: ctlr.c  globals.h  sf.c  telnet.c  trace_ds.c
src/x3270/Playback/: playback  playback.c
src/x3270/SelectPatch/: patch  select.c
src/x3270/charset/: brazilian  greek  russian  thai
src/x3270/cs/: 3270bm.h  badcommhi  box4  boxquestion  boxsolid  clockleft  clockright  commjag  commlo  cspack  greater  human  insert  leftarrow  lock  rightarrow  undera  upshift
src/x3270/html/: Attributes.html  Brackets.html  Bugs.html  Build.html  Charset.html  FAQ.html  Intro.html  Keymap.html  Lineage.html  New.html  README.html  ReleaseNotes.html  Resources.html  Wishlist.html  Y2K.html  ibm_hosts.html  x3270-man.html  x3270-man.html.tmpl  x3270-script.html  x3270.man.html  x3270if.html
src/x3270/ow_copy/: X3270.ad  globals.h  kybd.c  select.c
src/x3270/pr3287/: 3270ds.h  Makefile  Makefile.aux  Makefile.in  README  charset.c  configure  configure.in  ctlr.c  ctlrc.h  globals.h  mkversion.sh  pr3287.c  pr3287.lsm  pr3287.man  see.c  seec.h  sf.c  sfc.h  tables.c  tablesc.h  telnet.c  telnetc.h  tn3270e.h  trace_ds.c  trace_dsc.h  version.txt  wide.c  widec.h
(+86 files in other folders)
