dnl Copyright 2000, 2001, 2002 by Paul Mattes.
dnl  Permission to use, copy, modify, and distribute this software and its
dnl  documentation for any purpose and without fee is hereby granted,
dnl  provided that the above copyright notice appear in all copies and that
dnl  both that copyright notice and this permission notice appear in
dnl  supporting documentation.
dnl
dnl c3270 is distributed in the hope that it will be useful, but WITHOUT ANY
dnl WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
dnl FOR A PARTICULAR PURPOSE.  See the file LICENSE for more details.

dnl Process this file with autoconf to produce a configure script.
AC_INIT(c3270.c)
AC_CONFIG_HEADER(conf.h)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Figure out what sort of host this is.
dnl If it's hpux, then pass the -D_XOPEN_SOURCE_EXTENDED flag to cc, so that
dnl all of the curses KEY_XXX definitions are visible.
dnl If it's solaris2, then pass the -D__EXTENSIONS__ flas to cc, so that all
dnl of the usual Unix functions are visible.
AC_CANONICAL_HOST
XPOSIX=""
XANSI=""
case "$host_os" in
hpux)		XPOSIX=-D_XOPEN_SOURCE_EXTENDED
		;;
solaris2*)	XANSI=-D__EXTENSIONS__
		;;
darwin*)	XPRECOMP=-no-cpp-precomp
		;;
aix*)		BROKEN_NEWTERM=1
		;;
esac
AC_SUBST(XPOSIX)
AC_SUBST(XANSI)
AC_SUBST(XPRECOMP)
AC_SUBST(BROKEN_NEWTERM)

dnl Check for --without-readline
AC_ARG_WITH(readline, [  --without-readline      Don't use the readline library])

dnl Check for --without-pr3287
AC_ARG_WITH(pr3287,[  --without-pr3287        don't build pr3287])
if test -d pr3287 -a "$with_pr3287" != "no"  
then	PR="" 
	pr3mf=pr3287/Makefile
else	PR="#"
	pr3mf=""
fi 
AC_SUBST(PR)

dnl Check for libraries.
dnl Note that the order here is important.  The last libraries should appear
dnl first, so that objects in them can be used by subsequent libraries.
AC_CHECK_LIB(util, forkpty)
AC_CHECK_LIB(ncurses, newterm, , [AC_CHECK_LIB(curses, newterm, , [AC_MSG_ERROR(Can't find libncurses or new-enough libcurses)])])
if test "$with_readline" != no; then
AC_CHECK_LIB(readline, rl_initialize)
fi
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(socket, socket)

dnl If we're on AIX and have ncurses, cancel BROKEN_NEWTERM.
if test -n "$BROKEN_NEWTERM"
then	if test $ac_cv_lib_ncurses_newterm = yes
	then	:
	else	AC_DEFINE(BROKEN_NEWTERM,1)
	fi
fi

dnl Checks for header files.
dnl AC_HEADER_STDC
dnl AC_HEADER_SYS_WAIT
dnl AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)
AC_CHECK_HEADERS(sys/select.h)
AC_CHECK_HEADERS(readline/history.h)
AC_CHECK_HEADERS(pty.h)
AC_CHECK_HEADERS(libutil.h)
AC_CHECK_HEADERS(util.h)
AC_CHECK_HEADERS(getopt.h)
AC_CHECK_HEADERS(ncurses.h, , [AC_CHECK_HEADERS(curses.h, , [AC_MSG_ERROR(Can't find ncurses.h or curses.h)])])

dnl Checks for typedefs, structures, and compiler characteristics.
dnl AC_C_CONST
dnl AC_TYPE_PID_T
dnl AC_TYPE_SIZE_T
dnl AC_HEADER_TIME

dnl Checks for library functions.
dnl AC_PROG_GCC_TRADITIONAL
dnl AC_FUNC_MEMCMP
dnl AC_TYPE_SIGNAL
dnl AC_FUNC_VPRINTF
dnl AC_CHECK_FUNCS(gettimeofday putenv select socket strerror strstr strtol strtoul)
AC_CHECK_FUNCS(vasprintf)
AC_FUNC_FSEEKO

AC_ARG_ENABLE(ssl,[  --disable-ssl           leave out OpenSSL support])

checkssldir() { :
	if test -f "$1/include/openssl/ssl.h"
	then	ssldir="$1"
		return 0
	else	return 1
	fi
}

AC_ARG_WITH(ssl, [  --with-ssl=DIR          location of installed OpenSSL libraries/include files], [checkssldir "$withval"], )

if test "$enable_ssl" != "no"
then	dnl Check for SSL.
	AC_MSG_CHECKING([for OpenSSL library install directory])
	if test -z "$ssldir"
	then	for basedir in /usr/local /usr/lib /usr/pkg /usr /var/ssl /opt
		do	for dir in $basedir $basedir/ssl
			do	checkssldir $dir && break 2
			done
		done
	fi
	if test -z "$ssldir"
	then	AC_MSG_RESULT([Not found])
		echo
		echo "Couldn't find OpenSSL library installation directory."
		echo "Use the --with-ssl option to specify it."
		exit 1
	fi
	AC_MSG_RESULT([$ssldir])
	if test "$ssldir" != /usr
	then	CPPFLAGS="$CPPFLAGS -I$ssldir/include"
		LDFLAGS="$LDFLAGS -L$ssldir/lib"
	fi

	dnl Check for -lssl.
	AC_CHECK_LIB(crypto, CRYPTO_malloc, , [AC_MSG_ERROR(Can't find libcrypto)], )
	AC_CHECK_LIB(ssl, SSL_new, , [AC_MSG_ERROR(Can't find libssl)], )
	SSL=-DHAVE_LIBSSL
fi
AC_SUBST(SSL)

checkicudir() { :
	if test -f "$1/include/unicode/ucnv.h"
	then	icudir="$1"
		return 0
	else	return 1
	fi
}

if test "$enable_dbcs" = "yes"
then	dnl Check for ICU.
	AC_MSG_CHECKING([for ICU library install directory])
	if test -z "$icudir"
	then	for basedir in /usr/local /usr/lib /usr/pkg /usr /var/icu /opt
		do	for dir in $basedir $basedir/icu
			do	checkicudir $dir && break 2
			done
		done
	fi
	if test -z "$icudir"
	then	AC_MSG_RESULT([Not found])
		echo
		echo "Couldn't find ICU library installation directory."
		echo "Use the --with-icu option to specify it."
		enable_dbcs="no"	# insufficient, hmm
	else	AC_MSG_RESULT([$icudir])
		if test "$icudir" != /usr
		then	CPPFLAGS="$CPPFLAGS -I$icudir/include"
			LDFLAGS="$LDFLAGS -L$icudir/lib"
		fi

		dnl Check for -licui18n.
		icu_ver_file=$icudir/include/unicode/uversion.h
		if test ! -f $ivu_ver_file
		then	AC_MSG_ERROR(Can't find ICU version file)
		fi
		icu_suffix=`awk '/#define.*U_ICU_VERSION_SUFFIX/ {print $3}' $icu_ver_file`
		if test -z "$icu_suffix"
		then	AC_MSG_ERROR(Can't determine ICU version)
		fi
		AC_CHECK_LIB(icui18n, ucnv_open${icu_suffix}, , [enable_dbcs="no"], )
		if test "$enable_dbcs" = "no"
		then	echo "Can't find libicui18n"
		else
			dnl Figure out the ICU data suffix.
			dnl Todo: This needs some error recovery.
			AC_MSG_CHECKING([for ICU data prefix])
			cat >/tmp/icutst$$.c <<EOF
#include "unicode/ucnv.h"

int
main(int argc, char *argv[])
{
	printf("%s\n", U_ICUDATA_NAME);
	return 0;
}
EOF
			${CC} ${CPPFLAGS} -o /tmp/icutst$$ /tmp/icutst$$.c
			rm -f /tmp/icutst$$.c
			ICU_DATA_PREFIX=`/tmp/icutst$$`
			rm -f /tmp/icutst$$
			AC_MSG_RESULT([$ICU_DATA_PREFIX])

			if test -z "$ICU_DATA_PREFIX"
			then	AC_MSG_WARN(Cannot determine ICU data prefix)
				enable_dbcs="no"
			else
				dnl Check for xmkmkf
				AC_CHECK_PROG(makeconv_found,makeconv,found,notfound)
				if test "$makeconv_found" = "notfound"
				then	AC_MSG_WARN(Cannot find makeconv)
					enable_dbcs="no"
				fi
			fi
		fi

	fi
	if test "$enable_dbcs" = "no"
	then	AC_MSG_WARN(Disabling DBCS.)
	fi
fi
case "$enable_dbcs" in
yes)	AC_DEFINE(X3270_DBCS,1)
	DBCS_C="wide.c"
	DBCS_O="wide.o"
	CNV=""
	;;
*)	CNV="#"
	;;
esac
AC_SUBST(DBCS_C)
AC_SUBST(DBCS_O)
AC_SUBST(CNV)
AC_SUBST(ICU_DATA_PREFIX)

dnl Check for default pager
AC_PATH_PROG(LESSPATH, less)
AC_DEFINE_UNQUOTED(LESSPATH,"$LESSPATH")
AC_PATH_PROG(MOREPATH, more)
AC_DEFINE_UNQUOTED(MOREPATH,"$MOREPATH")

dnl Set up the configuration directory.
LIBX3270DIR='${sysconfdir}/x3270'
AC_SUBST(LIBX3270DIR)

dnl Check for unwanted parts.
AC_ARG_ENABLE(ansi,[  --disable-ansi          leave out NVT (ANSI) support])
case "$enable_ansi" in
""|yes)	AC_DEFINE(X3270_ANSI,1)
	;;
esac
AC_ARG_ENABLE(apl,[  --disable-apl           leave out APL character support])
case "$enable_apl" in
""|yes)	AC_DEFINE(X3270_APL,1)
	;;
esac
AC_ARG_ENABLE(dbcs,[  --enable-dbcs           include DBCS support])
case "$enable_dbcs" in
yes)	AC_DEFINE(X3270_DBCS,1)
	DBCS_C="wide.c"
	DBCS_O="wide.o"
	;;
*)	;;
esac
AC_SUBST(DBCS_C)
AC_SUBST(DBCS_O)
AC_ARG_ENABLE(ft,[  --disable-ft            leave out file transfer support])
case "$enable_ft" in
""|yes)	AC_DEFINE(X3270_FT,1)
	;;
esac
AC_ARG_ENABLE(local_process,[  --disable-local-process leave out local process support])
case "$enable_local_process" in
""|yes)	AC_DEFINE(X3270_LOCAL_PROCESS,1)
	;;
esac
AC_ARG_ENABLE(printer,[  --disable-printer       leave out printer session support])
case "$enable_printer" in
""|yes)	AC_DEFINE(X3270_PRINTER,1)
	;;
esac
AC_ARG_ENABLE(script,[  --disable-script        leave out scripting support])
case "$enable_script" in
""|yes)	AC_DEFINE(X3270_SCRIPT,1)
	;;
esac
AC_ARG_ENABLE(tn3270e,[  --disable-tn3270e       leave out TN3270E support])
case "$enable_tn3270e" in
""|yes)	AC_DEFINE(X3270_TN3270E,1)
	;;
esac
AC_ARG_ENABLE(trace,[  --disable-trace         leave out tracing support])
case "$enable_trace" in
""|yes)	AC_DEFINE(X3270_TRACE,1)
	;;
esac

dnl Generate the Makefile.
AC_OUTPUT(Makefile $pr3mf)
