dnl Copyright 2000, 2001, 2002 by Paul Mattes.
dnl  Permission to use, copy, modify, and distribute this software and its
dnl  documentation for any purpose and without fee is hereby granted,
dnl  provided that the above copyright notice appear in all copies and that
dnl  both that copyright notice and this permission notice appear in
dnl  supporting documentation.
dnl
dnl pr3287 is distributed in the hope that it will be useful, but WITHOUT ANY
dnl WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
dnl FOR A PARTICULAR PURPOSE.  See the file LICENSE for more details.

dnl Process this file with autoconf to produce a configure script.
AC_INIT(pr3287.c)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Figure out what sort of host this is.
dnl If it's solaris, then pass the -D__EXTENSIONS__ flag to cc, so that
dnl all of usual Unix functions are visible to strict ANSI compilers.
AC_CANONICAL_HOST
case "$host_os" in
solaris2*)	XANSI=-D__EXTENSIONS__
		;;
darwin*)	XPRECOMP=-no-cpp-precomp
		;;
linux*)		XANSI=-D__USE_BSD
		;;
*)		XANSI=""
		;;
esac
AC_SUBST(XANSI)
AC_SUBST(XPRECOMP)

AC_ARG_ENABLE(ssl,[  --disable-ssl           leave out OpenSSL support])

checkssldir() { :
	if test -f "$1/include/openssl/ssl.h"
	then	ssldir="$1"
		return 0
	else	return 1
	fi
}

AC_ARG_WITH(ssl, [  --with-ssl=DIR          location of installed OpenSSL libraries/include files], [checkssldir "$withval"], )

if test "$enable_ssl" != "no"
then	dnl Check for SSL.
	AC_MSG_CHECKING([for OpenSSL library install directory])
	if test -z "$ssldir"
	then	for basedir in /usr/local /usr/lib /usr/pkg /usr /var/ssl /opt
		do	for dir in $basedir $basedir/ssl
			do	checkssldir $dir && break 2
			done
		done
	fi
	if test -z "$ssldir"
	then	AC_MSG_RESULT([Not found])
		echo
		echo "Couldn't find OpenSSL library installation directory."
		echo "Use the --with-ssl option to specify it."
		exit 1
	fi
	AC_MSG_RESULT([$ssldir])
	if test "$ssldir" != /usr
	then	CPPFLAGS="$CPPFLAGS -I$ssldir/include"
		LDFLAGS="$LDFLAGS -L$ssldir/lib"
	fi

	dnl Check for -lssl.
	AC_CHECK_LIB(crypto, CRYPTO_malloc, , [AC_MSG_ERROR(Can't find libcrypto)], )
	AC_CHECK_LIB(ssl, SSL_new, , [AC_MSG_ERROR(Can't find libssl)], )
	SSL=-DHAVE_LIBSSL
fi
AC_SUBST(SSL)

dnl Check for libraries.
dnl Note that the order here is important.  The last libraries should appear
dnl first, so that objects in them can be used by subsequent libraries.
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(socket, socket)

dnl Generate the Makefile.
AC_OUTPUT(Makefile)
